--- a/src/application/setting.fxml
+++ b/src/application/setting.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="200.0" style="-fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="200.0" style="-fx-background-color: lightgray;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="27.0" layoutY="354.0" mnemonicParsing="false" onAction="#applySetting" prefHeight="20.0" prefWidth="50.0" text="OK" />
+      <Button fx:id="applyButton" layoutX="27.0" layoutY="354.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="50.0" text="OK" />
       <TextField fx:id="startText" layoutX="110.0" layoutY="30.0" prefHeight="23.0" prefWidth="68.0" />
       <TextField fx:id="rangeText" layoutX="110.0" layoutY="80.0" prefHeight="23.0" prefWidth="68.0" />
       <TextField fx:id="attamptsText" layoutX="110.0" layoutY="130.0" prefHeight="23.0" prefWidth="68.0" />
